# SingleLiteNetPlus

./: .gitignore  .gitmodules  README.md  aida_config_large.yaml  aida_config_medium.yaml  finetune_singletask.py  inference_singletask.py  pyproject.toml  train_aida.py  train_aida_combo_loss.py  train_simple_unet.py  train_singletask.py  val_singletask.py
configs/: config.yaml
configs/augmentation/: tlnp_default_aidadataset.yaml  tlnp_default_aidadataset_lidar.yaml  tlnp_default_bdd100k.yaml
configs/dataset/: aidadataset.yaml  aidadataset_lidar.yaml  bdd100k.yaml  custom_source.yaml
configs/experiment/: custom_eval_single_curr_alt_solid_dash_curb.yaml  custom_inference_single_task_dac_daa_lls_lld_curb.yaml  custom_train_single_task_local_tests.yaml  default_finetuning.yaml  default_finetuning_lidar.yaml  default_inference_lidar.yaml  default_inference_single_task.yaml  default_inference_single_task_lidar.yaml  default_train_single_task.yaml
configs/logging/: wandb_off.yaml  wandb_on.yaml
configs/loss/: focal_tversky.yaml
configs/optimizer/: adamw.yaml
datasets/: __init__.py  mergedDataset.py
datasets/utils/: utils.py  (+2 more)
evaluation/: SegmentationMetric.py  __init__.py  eval_logic.py
model/: SingleLiteNetPlus.py
training/: __init__.py  train_logic.py
utils/: __init__.py  lidar_utils.py  logger_utils.py  reproducibility.py
weights_studio/: .gitignore  index.html  package.json  readme.md  style.css
weightslab/: .gitignore  README.md  requirements.txt  setup.py
ws-aida-segmentation/: aida_config.yaml  simple_unet_config.yaml  train_aida_combo_loss.py
(+109 files in other folders)
